@@ -1,3 +1,4 @@
+lblAllFields = in all fields
 lblEditPictures = Can edit, remove and add pictures
 lblCreatingNewItem = Creating new %1 
 lblPicture = Picture
