@@ -1,3 +1,4 @@
+lblAllFields = in alle velden
 msgFileCouldNotBeFound=Het bestand kon niet worden geopend. Het bestand is niet te benaderen door de server of het pad wijst niet naar een (valide) bestand.
 lblEditPictures=Kan afbeeldingen toevoegen, verwijderen en bewerken
 lblImageServerAddress=Image server adres
