@@ -1,3 +1,9 @@
+lblAllFields = in all fields
+
+[Changed]
+- Web; added field selection for the search
+- Quick search now correctl seatches on boolean values as well
+
 --------------------------------------------------------------------
 Data Crow version 5.0                         Released on 2025-04-29
 --------------------------------------------------------------------
